# orix

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  README_zh.md  cliff.toml  config.example.toml  deny.toml  package.json  skills-lock.json
.agents/skills/rust-skills/rules/: doc-cargo-metadata.md
.agents/skills/setup-rust/: SKILL.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  docs.yml  publish-crates.yml  release.yml  reusable-ci.yml  security.yml
benches/: Cargo.toml  basic.rs  bench.rs
benches/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  errors.rs  logging.rs  main.rs  progress.rs  styles.rs
crates/cli/src/cmd/: install.rs  lockfile.rs  mod.rs  prune.rs  script.rs  store.rs
crates/cli/src/reporter/: color.rs  frame.rs  interactive.rs  mod.rs  plain.rs  state.rs  terminal.rs
crates/cli/src/reporter/frame/: mod.rs  sections.rs  steps.rs  tests.rs  util.rs
crates/cli/tests/: integration.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  load.rs  platform.rs  tests.rs  types.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  pipeline.rs  script.rs
crates/core/src/pipeline/: add_remove.rs  deploy.rs  fetch.rs  lifecycle.rs  lockfile_io.rs  mod.rs  perf.rs  prelude.rs  prune.rs  store_cmd.rs  streaming.rs  types.rs
crates/core/src/pipeline/install/: fast_path.rs  fetch_phase.rs  finish.rs  link.rs  mod.rs  resolve.rs  streaming_pipeline.rs  workspace_link.rs
crates/core/src/reporter/: event.rs  mod.rs
crates/core/src/script/: mod.rs  runner.rs  types.rs  util.rs
crates/domain/: Cargo.toml
crates/domain/src/: graph.rs  integrity.rs  lib.rs  name.rs  package.rs  peer.rs  platform.rs  registry.rs  script.rs  version.rs
crates/fetcher/: Cargo.toml
crates/fetcher/examples/: compute_hash.rs
crates/fetcher/src/: cache.rs  fetcher.rs  lib.rs  patch.rs
crates/linker/: Cargo.toml
crates/linker/src/: lib.rs  linker.rs  linker_platform.rs
crates/linker/src/linker/: layout.rs  mod.rs  prelude.rs
crates/linker/src/linker/link_graph/: bins.rs  import_files.rs  mod.rs  symlinks.rs
crates/linker/src/tests/: helpers.rs  layout.rs  link_graph_bins.rs  link_graph_core.rs  link_graph_import.rs  link_graph_optional.rs  link_graph_validate.rs  mod.rs  platform.rs
crates/lockfile/: Cargo.toml
crates/lockfile/src/: lib.rs  ops.rs  pnpm.rs  resolve.rs  types.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: lib.rs
crates/registry/: Cargo.toml
crates/registry/src/: cache.rs  lib.rs  singleflight.rs  tests.rs  types.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: lib.rs  resolver.rs
crates/resolver/src/resolver/: batch.rs  mod.rs  state.rs  types.rs  version.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs  store.rs
crates/store/src/store/: error.rs  import.rs  mod.rs  prune.rs  verify.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: lib.rs  workspace.rs
crates/workspace/src/workspace/: cycles.rs  discover.rs  mod.rs  tests.rs  types.rs
docs/: architecture.md  changelog.md  contributing.md  debugging.md  development.md  index.md  package.json  pnpm-lock.yaml  release.md
docs/.project/: README.md  TODO.md  idea.md
docs/.project/design/: bonree-install-performance-plan.md  build.md  cli-config.md  cli-run-passthrough-lifecycle.md  core.md  debug-log.md  ecosystem-compat.md  fetcher.md  index.md  install-performance-optimization.md  lifecycle-scripts.md  linker.md  lockfile-snapshots.md  lockfile.md  manifest-domain-utils.md  npm-publish.md  plugin.md  pnpm-feature-coverage-bonree-package-json.md  pnpm-performance.md  pnpm.md  resolver-performance.md  resolver.md  store.md  testing-quality.md  version.md  workspace.md
docs/.project/design/output/: install-color-output.md  install-output.md  install-output2.md  output3.md
docs/.project/isuess/: 001-windows-link-system-lag.md  002-lockfile-unchanged-after-version-bump.md  003-windows-junction-bare-drive-node-eisdir.md  README.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/api/: cli.md  config.md  core.md  macros.md  overview.md  utils.md
docs/guide/: development.md  getting-started.md  project-structure.md  publishing.md  release.md
examples/: README.md  basic.rs
examples/basic-install/: index.js  orix-lock.yaml  package.json  pnpm-lock.yaml
examples/bin-package/: orix-lock.yaml  package.json
examples/dev-dependencies/: orix-lock.yaml  package.json
examples/dev-dependencies/src/: index.js
examples/optional-dependencies/: index.js  orix-lock.yaml  package.json
examples/workspace-monorepo/: orix-lock.yaml  package.json
examples/workspace-monorepo/apps/web/: index.js  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/main/: LICENSE  README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
packaging/: setup.sh
packaging/appimage/: AppRun  build.sh  orix.desktop
packaging/debian/: build.sh  changelog  conffiles  control  postinst  postrm  prerm
packaging/macos/: Conclusion.txt  License.txt  Welcome.txt  build.sh  distribution.xml
packaging/macos/scripts/: postinstall  preinstall
packaging/wix/: Product.wxs  Product_compiled.wixobj  Product_compiled.wxs  build.sh
scripts/: check-package.mjs  local-pack.mjs  sync-version.mjs
tests/: integration.rs
xtask/: Cargo.toml
xtask/src/: main.rs
