[workspace]
members = [
  "crates/cli",
  "crates/core",
  "crates/config",
  "crates/utils",
  "crates/macros",
  "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/your-org/your-repo"
homepage = "https://github.com/your-org/your-repo"
documentation = "https://docs.rs/your-project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
keywords = ["rust", "cli", "workspace"]
categories = ["command-line-utilities"]

[workspace.dependencies]
your-cli = { path = "crates/cli", version = "0.1.0" }
your-core = { path = "crates/core", version = "0.1.0" }
your-config = { path = "crates/config", version = "0.1.0" }
your-utils = { path = "crates/utils", version = "0.1.0" }
your-macros = { path = "crates/macros", version = "0.1.0" }

anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "process", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
which = "6"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
large_enum_variant = "warn"
manual_ok_or = "warn"
