[workspace]
members = [
  "crates/cli",
  "crates/core",
  "crates/config",
  "crates/utils",
  "crates/macros",
  "crates/domain",
  "crates/manifest",
  "crates/resolver",
  "crates/registry",
  "crates/fetcher",
  "crates/store",
  "crates/lockfile",
  "crates/linker",
  "crates/workspace",
  "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/your-org/your-repo"
homepage = "https://github.com/your-org/your-repo"
documentation = "https://docs.rs/your-project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
keywords = ["rust", "cli", "workspace"]
categories = ["command-line-utilities"]

[workspace.dependencies]
# ── Core deps ─────────────────────────────────────────────────────────────────
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "process", "signal"] }

# ── Logging ───────────────────────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# ── Networking ─────────────────────────────────────────────────────────────────
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# ── Package management ─────────────────────────────────────────────────────────
semver = "1"
tar = "0.4"
flate2 = "1"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
rayon = "1"
url = "2"
glob = "0.3"
dirs = "5"
tempfile = "3"
subtle = "2"

# ── Testing ───────────────────────────────────────────────────────────────────
which = "6"
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"

# ── orix crate aliases (path must match actual package name) ──────────────────
orix-cli = { path = "crates/cli", version = "0.1.0" }
orix-core = { path = "crates/core", version = "0.1.0" }
orix-config = { path = "crates/config", version = "0.1.0" }
orix-utils = { path = "crates/utils", version = "0.1.0" }
orix-domain = { path = "crates/domain", version = "0.1.0" }
orix-manifest = { path = "crates/manifest", version = "0.1.0" }
orix-resolver = { path = "crates/resolver", version = "0.1.0" }
orix-registry = { path = "crates/registry", version = "0.1.0" }
orix-fetcher = { path = "crates/fetcher", version = "0.1.0" }
orix-store = { path = "crates/store", version = "0.1.0" }
orix-lockfile = { path = "crates/lockfile", version = "0.1.0" }
orix-linker = { path = "crates/linker", version = "0.1.0" }
orix-workspace = { path = "crates/workspace", version = "0.1.0" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
large_enum_variant = "warn"
manual_ok_or = "warn"
