[workspace]
members = [
  "crates/cli",
  "crates/core",
  "crates/config",
  "crates/utils",
  "crates/macros",
  "crates/domain",
  "crates/manifest",
  "crates/resolver",
  "crates/registry",
  "crates/fetcher",
  "crates/store",
  "crates/lockfile",
  "crates/linker",
  "crates/workspace",
  "xtask",
  "benches",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/baicie/orix"
homepage = "https://github.com/baicie/orix"
documentation = "https://docs.rs/orix"
authors = ["baicie <2055572879@qq.com>"]
readme = "README.md"
keywords = ["rust", "cli", "package-manager", "pnpm"]
categories = ["command-line-utilities"]

[workspace.dependencies]
# ── Core deps ─────────────────────────────────────────────────────────────────
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml_edit = "0.25"

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "process", "signal"] }

# ── Logging ───────────────────────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# ── Networking ─────────────────────────────────────────────────────────────────
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# ── Package management ─────────────────────────────────────────────────────────
semver = "1"
tar = "0.4"
patch = "0.7"
flate2 = "1"
sha1 = "0.11"
sha2 = "0.11"
hex = "0.4"
base64 = "0.22"
walkdir = "2"
rayon = "1"
futures = "0.3"
url = "2"
glob = "0.3"
dirs = "6"
tempfile = "3"
subtle = "2"
parking_lot = "0.12"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }

# ── Testing ───────────────────────────────────────────────────────────────────
which = "8"
assert_cmd = "2"

# ── Dist packaging ───────────────────────────────────────────────────────────────
zip = "8"
predicates = "3"
pretty_assertions = "1"

# ── CLI UI ──────────────────────────────────────────────────────────────────────
indicatif = "0.18"
crossterm = "0.29"
unicode-width = "0.2"

# ── orix crate aliases (path must match actual package name) ──────────────────
orix-cli = { path = "crates/cli", version = "0.1.0" }
orix-core = { path = "crates/core", version = "0.1.0" }
orix-config = { path = "crates/config", version = "0.1.0" }
orix-utils = { path = "crates/utils", version = "0.1.0" }
orix-domain = { path = "crates/domain", version = "0.1.0" }
orix-manifest = { path = "crates/manifest", version = "0.1.0" }
orix-resolver = { path = "crates/resolver", version = "0.1.0" }
orix-registry = { path = "crates/registry", version = "0.1.0" }
orix-fetcher = { path = "crates/fetcher", version = "0.1.0" }
orix-store = { path = "crates/store", version = "0.1.0" }
orix-lockfile = { path = "crates/lockfile", version = "0.1.0" }
orix-linker = { path = "crates/linker", version = "0.1.0" }
orix-workspace = { path = "crates/workspace", version = "0.1.0" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
large_enum_variant = "warn"
manual_ok_or = "warn"
