[package]
name = "orix-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bench]]
name = "bench"
path = "bench.rs"
harness = false

[dev-dependencies]
criterion = "0.5"
serde_yaml = { workspace = true }
tempfile = { workspace = true }
orix-domain = { workspace = true }
orix-manifest = { workspace = true }
orix-store = { workspace = true }
orix-lockfile = { workspace = true }
orix-workspace = { workspace = true }
orix-utils = { workspace = true }
