[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
reqwest = { workspace = true, features = ["blocking"] }
semver.workspace = true
which.workspace = true
zip.workspace = true
flate2.workspace = true
tar.workspace = true
