[package]
name = "rpnpm-cli"
description = "Command-line interface for rpnpm."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "rpnpm"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rpnpm-core = { workspace = true }
rpnpm-config = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }

[lints]
workspace = true
