[package]
name = "orix-cli"
description = "Command-line interface for orix."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "orix"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing-subscriber = { workspace = true }
orix-core = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
flate2 = { workspace = true }
base64 = { workspace = true }
predicates = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
