[package]
name = "orix-config"
description = ".npmrc loading and configuration management."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
url = { workspace = true }
dirs = { workspace = true }
orix-domain = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
