[package]
name = "orix-core"
description = "Install pipeline orchestration for orix."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
tracing = { workspace = true }
orix-domain = { workspace = true }
orix-manifest = { workspace = true }
orix-config = { workspace = true }
orix-resolver = { workspace = true }
orix-fetcher = { workspace = true }
orix-store = { workspace = true }
orix-lockfile = { workspace = true }
orix-linker = { workspace = true }
orix-workspace = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
