[package]
name = "rpnpm-domain"
description = "Shared domain types for rpnpm."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
