[package]
name = "orix-domain"
description = "Shared domain types for orix."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
semver = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
