[package]
name = "rpnpm-fetcher"
description = "Tarball download, integrity verification, and extraction."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
reqwest = { workspace = true }
sha2 = { workspace = true }
sha1 = "0.10"
hex = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
rayon = { workspace = true }
subtle = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
rpnpm-domain = { workspace = true }
rpnpm-registry = { workspace = true }
rpnpm-store = { workspace = true }

[lints]
workspace = true
