[package]
name = "orix-fetcher"
description = "Tarball download, integrity verification, and extraction."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["fs", "sync"] }
reqwest = { workspace = true }
sha2 = { workspace = true }
sha1 = "0.10"
hex = { workspace = true }
subtle = { workspace = true }
base64 = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
orix-domain = { workspace = true }
orix-store = { workspace = true }

[lints]
workspace = true
