[package]
name = "orix-linker"
description = "node_modules/.pnpm structure and symlink/hardlink generation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
orix-domain = { workspace = true }
orix-store = { workspace = true }
orix-manifest = { workspace = true }

[lints]
workspace = true
