[package]
name = "rpnpm-lockfile"
description = "rpnpm-lock.yaml read/write/diff."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
rpnpm-domain = { workspace = true }
rpnpm-manifest = { workspace = true }

[lints]
workspace = true
