[package]
name = "orix-lockfile"
description = "orix-lock.yaml read/write/diff."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
orix-domain = { workspace = true }
orix-manifest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
