[package]
name = "your-macros"
description = "Optional procedural macros for your Rust workspace project."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]

[lints]
workspace = true
