[package]
name = "rpnpm-macros"
description = "Procedural macros for the rpnpm package manager."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]

[lints]
workspace = true
