[package]
name = "orix-manifest"
description = "package.json parsing and validation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
orix-domain = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
