[package]
name = "rpnpm-registry"
description = "npm registry API client."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rpnpm-domain = { workspace = true }

[lints]
workspace = true
