[package]
name = "orix-registry"
description = "npm registry API client."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
orix-domain = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros"] }
futures = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros"] }

[lints]
workspace = true
