[package]
name = "orix-resolver"
description = "Dependency resolution with semver matching."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
orix-domain = { workspace = true }
orix-registry = { workspace = true }
orix-manifest = { workspace = true }
orix-workspace = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
