[package]
name = "orix-store"
description = "Content-addressable package cache."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
walkdir = { workspace = true }
parking_lot = { workspace = true }
orix-domain = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
