[package]
name = "your-utils"
description = "Shared utilities for your Rust workspace project."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true
