[package]
name = "rpnpm-workspace"
description = "Monorepo workspace support and pnpm-workspace.yaml parsing."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
glob = { workspace = true }
rpnpm-domain = { workspace = true }
rpnpm-manifest = { workspace = true }

[lints]
workspace = true
