[package]
name = "orix-workspace"
description = "Monorepo workspace support and pnpm-workspace.yaml parsing."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
glob = { workspace = true }
orix-manifest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
